--- a/new-site/havana/index.html
+++ b/new-site/havana/index.html
@@ -105,7 +105,7 @@
                 <source srcset="images/01_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/01_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/01_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
@@ -143,7 +143,7 @@
                 <source srcset="images/02_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/02_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/02_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -162,7 +162,7 @@
                 <source srcset="images/03_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/03_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/03_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
@@ -229,7 +229,7 @@
                 <source srcset="images/04_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/04_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/04_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -247,7 +247,7 @@
                 <source srcset="images/05_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/05_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
@@ -267,7 +267,7 @@
                 <source srcset="images/06_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/06_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/06_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
@@ -289,7 +289,7 @@
                 <source srcset="images/07_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/07_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/07_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -307,7 +307,7 @@
                 <source srcset="images/08_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/08_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/08_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
         </div>
         <!-- end wrapper div -->
@@ -325,7 +325,7 @@
                 <source srcset="images/09_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/09_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/09_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -344,7 +344,7 @@
                 <source srcset="images/10_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/10_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/10_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -362,7 +362,7 @@
                 <source srcset="images/11_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/11_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/11_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -381,7 +381,7 @@
                 <source srcset="images/12_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/12_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/12_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/12_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
@@ -449,7 +449,7 @@
                 <source srcset="images/13_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/13_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/13_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/13_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -467,7 +467,7 @@
                 <source srcset="images/14_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/14_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/14_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/14_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
@@ -486,7 +486,7 @@
                 <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/15_Havana_Gabriel_Flores_Coast_to_Coasta_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Havana, Gabriel Flores">
             </picture>
             <!-- IMAGE END -->
 
