--- a/new-site/paris/index.html
+++ b/new-site/paris/index.html
@@ -110,7 +110,7 @@
                 <source srcset="images/01_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/01_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/01_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -150,7 +150,7 @@
                 <source srcset="images/02_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/02_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/02_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -168,7 +168,7 @@
                 <source srcset="images/03_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/03_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/03_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -187,7 +187,7 @@
                 <source srcset="images/04_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/04_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/04_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -226,7 +226,7 @@
                 <source srcset="images/05_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/05_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -246,7 +246,7 @@
                 <source srcset="images/06_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/06_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -264,7 +264,7 @@
                 <source srcset="images/07_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/07_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/07_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -282,7 +282,7 @@
                 <source srcset="images/08_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/08_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/08_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
         </div>
         <!-- end wrapper div -->
@@ -299,7 +299,7 @@
                 <source srcset="images/09_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/09_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/09_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -317,7 +317,7 @@
                 <source srcset="images/10_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/10_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/10_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -336,7 +336,7 @@
                 <source srcset="images/11_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/11_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/11_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -375,7 +375,7 @@
                 <source srcset="images/12_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/12_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/12_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/12_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -417,7 +417,7 @@
                 <source srcset="images/13_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/13_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/13_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/13_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -460,7 +460,7 @@
                 <source srcset="images/14_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/14_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/14_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/14_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -502,7 +502,7 @@
                 <source srcset="images/15_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/15_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/15_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/15_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -521,7 +521,7 @@
                 <source srcset="images/16_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/16_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/16_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/16_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -541,7 +541,7 @@
                 <source srcset="images/17_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/17_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/17_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/17_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -560,7 +560,7 @@
                 <source srcset="images/18_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/18_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/18_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/18_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -579,7 +579,7 @@
                 <source srcset="images/19_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/19_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/19_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/19_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -598,7 +598,7 @@
                 <source srcset="images/20_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/20_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/20_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/20_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -617,7 +617,7 @@
                 <source srcset="images/21_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/21_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/21_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/21_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -637,7 +637,7 @@
                 <source srcset="images/22_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/22_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/22_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/22_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -657,7 +657,7 @@
                 <source srcset="images/23_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/23_Paris_girls_Christa_Renee_TAQ_CITY-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/23_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/23_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -741,7 +741,7 @@
                 <source srcset="images/24_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/24_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/24_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/24_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
@@ -760,7 +760,7 @@
                 <source srcset="images/25_Paris_girls_Christa_Renee_TAQ_CITY-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/25_Paris_girls_Christa_Renee_TAQ_CITY-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/25_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/25_Paris_girls_Christa_Renee_TAQ_CITY-S.jpg" alt="Tiny Atlas Quarterly, Paris, Christa Renee">
             </picture>
             <!-- IMAGE END -->
 
