--- a/new-site/tel-aviv/index.html
+++ b/new-site/tel-aviv/index.html
@@ -104,7 +104,7 @@
                 <source srcset="images/01_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/01_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/01_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/01_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
@@ -142,7 +142,7 @@
                 <source srcset="images/02_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/02_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/02_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/02_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -160,7 +160,7 @@
                 <source srcset="images/03_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/03_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/03_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/03_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -178,7 +178,7 @@
                 <source srcset="images/04_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/04_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/04_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/04_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -196,7 +196,7 @@
                 <source srcset="images/05_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/05_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/05_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/05_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
@@ -216,7 +216,7 @@
                 <source srcset="images/06_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/06_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/06_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/06_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -234,7 +234,7 @@
                 <source srcset="images/07_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/07_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/07_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/07_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -253,7 +253,7 @@
                 <source srcset="images/08_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/08_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/08_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/08_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
 
             <!-- BOX  INTERVIEW-->
@@ -298,7 +298,7 @@
                 <source srcset="images/09_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <source srcset="images/09_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-V.jpg" media="(orientation: portrait)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/09_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/09_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
@@ -318,7 +318,7 @@
                 <source srcset="images/10_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/10_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/10_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/10_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -336,7 +336,7 @@
                 <source srcset="images/11_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/11_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/11_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/11_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
         </div>
@@ -354,7 +354,7 @@
                 <source srcset="images/12_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/12_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/12_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/12_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
@@ -373,7 +373,7 @@
                 <source srcset="images/13_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/13_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/13_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/13_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
@@ -433,7 +433,7 @@
                 <source srcset="images/15_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/15_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/15_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/15_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
@@ -488,7 +488,7 @@
                 <source srcset="images/14_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-L.jpg" media="(min-width: 960px)">
                 <source srcset="images/14_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-M.jpg" media="(min-width: 768px)">
                 <!--[if IE 9]></video><![endif]-->
-                <img srcset="images/14_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Alto Minho, Emily Nathan">
+                <img srcset="images/14_Tel_Aviv_Liah_Chesnokov_writer_Flora_Tsapovsky_TAQ_City-S.jpg" alt="Tiny Atlas Quarterly, Tel Aviv, Flora Tsapovsky">
             </picture>
             <!-- IMAGE END -->
 
